--- a/index.html
+++ b/index.html
@@ -13,7 +13,10 @@
 <body>
     <nav class="navbar navbar-expand-lg py-4 ">
         <div class="container">
-            <a class="navbar-brand d-flex align-items-center justify-content-between m-0" href="#" ><img src="images/logo@2x.png" class="logoImg me-2" alt="weather logo"><p class="m-0">weather</p></a>
+            <a class="navbar-brand d-flex align-items-center justify-content-between m-0" href="#"><img
+                    src="images/logo@2x.png" class="logoImg me-2" alt="weather logo">
+                <p class="m-0">weather</p>
+            </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
                 aria-label="Toggle navigation">
@@ -52,6 +55,40 @@
             </div>
         </div>
     </div>
+    <footer>
+        <div class="container pt-5 pb-3">
+            <div class="row">
+                <div class="col-md-8 position-relative">
+                    <input type="text" placeholder="Enter your email to subscribe" class="rounded-5 px-4 py-2 form-control ">
+                    <button class="position-absolute btn btn-info top-0 end-0 rounded-5 px-4 py-2 text-white">subscribe</button>
+                </div> 
+                <div class="col-md-3 offset-1">
+                    <ul class=" d-flex gap-3  list-unstyled ">
+                        <li>
+                            <i
+                                class="fa-brands fa-facebook-f customIcon  d-flex justify-content-center align-items-center rounded-circle fa-l "></i>
+                        </li>
+                        <li>
+                            <i class=" customIcon  d-flex justify-content-center align-items-center rounded-circle fa-l 
+                                 fa-brands fa-twitter"></i>
+                        </li>
+                        <li>
+                            <i
+                                class="fa-brands fa-instagram customIcon  d-flex justify-content-center align-items-center rounded-circle fa-l "></i>
+                        </li>
+
+                        <li>
+                            <i
+                                class="fa-brands fa-pinterest customIcon  d-flex justify-content-center align-items-center rounded-circle fa-l "></i>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+            <p class="py-3">Copyright 2014 Company name. Designed by Themezy. All rights reserved</p>
+        </div>
+
+
+    </footer>
 
 
 
