--- a/index.html
+++ b/index.html
@@ -28,16 +28,16 @@
                         <a class="nav-link  active" aria-current="page" href="#">Home</a>
                     </li>
                     <li class="nav-item mx-3">
-                        <a class="nav-link " href="#">Link</a>
+                        <a class="nav-link " href="#">News</a>
                     </li>
                     <li class="nav-item mx-3">
-                        <a class="nav-link " href="#">Link</a>
+                        <a class="nav-link " href="#">Live cameras</a>
                     </li>
                     <li class="nav-item mx-3">
-                        <a class="nav-link " href="#">Link</a>
+                        <a class="nav-link " href="#">Photos</a>
                     </li>
                     <li class="nav-item mx-3">
-                        <a class="nav-link " href="#">Link</a>
+                        <a class="nav-link " href="#">contact</a>
                     </li>
 
                 </ul>
